# SPIREpy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml  python-package.yml
docs/: Makefile  docs-requirements.txt
docs/source/: conf.py  index.rst  quickstart.rst
examples/: sample_processing.py
spirepy/: __init__.py  data.py  genome.py  logger.py  sample.py  study.py  util.py
spirepy/cli/: __init__.py  download.py  spire.py  view.py
tests/integration/: test_cli.py  test_data_caching.py
tests/unit/: fixtures.py  test_data.py  test_sample.py  test_study.py
