[build-system]
requires = ["setuptools"] # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.


[project]
name = "spirepy" # REQUIRED, is the only field that cannot be marked as dynamic.
version = "0.1.0" # REQUIRED, although can be dynamic
description = "A SPIRE wrapper and command-line tool for interacting with global microbiome data."
readme = "README.md"
requires-python = ">=3.9"
license =  "GPL-3.0-or-later"
keywords = ["sample", "setuptools", "development"]
authors = [{ name = "Alexandre Areias Castro", email = "alexandreareiascastro@gmail.com" }]
maintainers = [
{ name = "Alexandre Areias Castro", email = "alexandreareiascastro@gmail.com" },
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: GPL 3.0",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/areias03/SPIREpy"
"Bug Reports" = "https://github.com/areias03/SPIREpy/issues"
"Funding" = "https://donate.pypi.org"
"Source" = "https://github.com/areias03/SPIREpy"

[project.scripts]
spire = "spirepy:cli:spire:main"


[tool.setuptools]
package-data = { "sample" = ["*.dat"] }
